# scch-2023

./: .gitignore  Cargo.toml  Shuttle.toml
src/: main.rs
src/hunt/: day_01.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_11.rs  day_12.rs  mod.rs
