[package]
name = "cch001"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
axum-extra = { version = "0.9.2", features = ["cookie"] }
base64 = "0.21.7"
fancy-regex = "0.13.0"
serde = "1.0.196"
serde_json = "1.0.113"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.28.2"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
